# loki_logger

./: .gitignore  LICENSE  README.md  pyproject.toml
loki_logger/: __init__.py  core.py
test/: test_loki.py
tests/: test_loki.py
